tests/integration/fail/list_index_out_of_bounds.kr
# Test: List index assignment out of bounds
# Expected: Fail with "List index out of bounds"

let nums to list 1, 2, 3
let nums at 10 to 100
print nums

